# controlmap-parser

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  cspell.jsonc  readme.md  result.json  result.txt
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: build-and-test.yml  ci.yml  release.yml
docs/i18n/jp/: readme.md
examples/: cast_and_fmt.rs  controlmap.txt  controlmap_sample.txt  controlmap_sample2.txt  parse_and_print.rs  parse_to_json.rs  scan_code.rs
src/: controlmap.rs  lib.rs  main.rs  parser.rs  scan_code.rs
src/pest/: controlmap.pest
test-files/: controlmap_test.txt  expected.json
