[package]
name = "controlmap-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "readme.md"
authors = ["SARDONYX"]
repository = "https://github.com/SARDONYX-sard/controlmap-parser"
documentation = "https://docs.rs/controlmap-parser"
homepage = "https://github.com/SARDONYX-sard/controlmap-parser"
description = """
Controlmap parser is a minimal parser for controlmap.txt files.
"""
keywords = ["controlmap", "json", "no-std", "skyirm"]
categories = ["compilers"]
autobenches = true
include = ["src/", "LICENSE*", "readme.md"]

# Append the cfg-tag:docsrs to activate the feature(doc_cfg) attribute
# when generating a document on docs.rs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1.0.53" }
pest = { version = "2.1.3" }
pest_derive = { version = "2.1.0" }
indexmap = { version = "1.8.0" }

[[example]]
name = "controlmap-parser"
path = "examples/controlmap-parser.rs"

[lib]
name = "controlmap_parser"
edition = "2021"
