[package]
name = "controlmap-parser"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "readme.md"
authors = ["SARDONYX"]
repository = "https://github.com/SARDONYX-sard/controlmap-parser"
documentation = "https://docs.rs/controlmap-parser"
homepage = "https://github.com/SARDONYX-sard/controlmap-parser"
description = """
Controlmap parser is a minimal parser for controlmap.txt files.
"""
keywords = ["controlmap", "json", "skyirm"]
categories = ["compilers"]
autobenches = true
include = ["src/", "LICENSE*", "readme.md"]

# Append the cfg-tag:docsrs to activate the feature(doc_cfg) attribute
# when generating a document on docs.rs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
log = "0.4.20"                                     # Logger
nom = { version = "7.1.3", features = ["alloc"] }  # Syntax
serde = { version = "1.0", features = ["derive"] } # Implement (De)Serializer
serde_json = "1.0"                                 # Json converter
thiserror = "1.0.49"                               # define errors type

[features]
serde = []

[dev-dependencies]
pretty_assertions = "1.4.0"
simple-log = "1.6.0"

[[example]]
name = "controlmap-parser"
path = "examples/parse_to_json.rs"

[lib]
name = "controlmap_parser"
edition = "2021"
