[package]
name = "controlmap-parser"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "readme.md"
authors = ["SARDONYX"]
repository = "https://github.com/SARDONYX-sard/controlmap-parser"
documentation = "https://docs.rs/controlmap-parser"
homepage = "https://github.com/SARDONYX-sard/controlmap-parser"
description = """
(De)Serializer of `controlmap.txt` in Skyrim
"""
keywords = ["controlmap", "json", "skyirm"]
categories = ["compilers"]
autobenches = true
include = ["src/", "LICENSE*", "readme.md"]

# Append the cfg-tag:docsrs to activate the feature(doc_cfg) attribute
# when generating a document on docs.rs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nom = { version = "7.1.3", features = ["alloc"] }  # Syntax
num-derive = "0.4"                                 # enum to number
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] } # Implement (De)Serializer
serde_json = "1.0"                                 # Json converter
thiserror = "1.0.49"                               # define errors type

[dev-dependencies]
anyhow = "1.0.75"
pretty_assertions = "1.4.0"
tracing = "0.1.40"            # Logger
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[features]
serde = []

[lib]
name = "controlmap_parser"
edition = "2021"
